Edited quotes and command structures.

--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -2,27 +2,26 @@
 
 \subsection{Overview}
 
-This section will analyse how appropriate our client design was to achieve the aims outlined in the client section\footnote{See section x.y for a detailed discussion}. Some of our design choices worked well, such as the interfaces used by the controller to separate concerns. Another decision that worked well was our use of the object oriented features of Java to implement chat windows, which reduced the challenge of routing internal messages to the correct windows. These aspects will be discussed in the `Design Implementation' section.
+This section will analyse how appropriate our client design was to achieve the aims outlined in the client section.\footnote{See section x.y for a detailed discussion} Some of our design choices worked well, such as the interfaces used by the controller to separate concerns. Another decision that worked well was our use of the object oriented features of Java to implement chat windows, which reduced the challenge of routing internal messages to the correct windows. These aspects will be discussed in the `Design Implementation' section.
 
-While implementing the client, it became clear that some of our larger design choices were naive, and further design work had to be conducted. One case involved the interaction between the controller and networking subsystem. These changes will be discussed in the `Design Implementation' section. In some cases, smaller design choices required larger changes. Of particular significance, our understanding of the practical working of the GIM protocol to create personal chats proved to be weak. This required design work reaching over the protocol and the model component of the system. This process tested our ability to collaborate as a team to implement an interacting system. The degree of success of our changes will be discussed in the 'Collaboration' section. Furthermore, as we became more familiar with the Java Swing environment, our code went through evolutionary steps to implement certain features in a more sensible manner, such as how displaying updates to user information was handled. The 'Evolution of Code' section will discuss problems we identified with code that was functional but deemed to be hard to maintain, and the merits of the changes we made, such as in the above case. 
-
+While implementing the client, it became clear that some of our larger design choices were naive, and further design work had to be conducted. One case involved the interaction between the controller and networking subsystem. These changes will be discussed in the `Design Implementation' section. In some cases, smaller design choices required larger changes. Of particular significance, our understanding of the practical working of the GIM protocol to create personal chats proved to be weak. This required design work reaching over the protocol and the model component of the system. This process tested our ability to collaborate as a team to implement an interacting system. The degree of success of our changes will be discussed in the `Collaboration' section. Furthermore, as we became more familiar with the Java Swing environment, our code went through evolutionary steps to implement certain features in a more sensible manner, such as how displaying updates to user information was handled. The `Evolution of Code' section will discuss problems we identified with code that was functional but deemed to be hard to maintain, and the merits of the changes we made, such as in the above case.
 \subsection{Design Implementation}
 \label{designimpl}
 
-In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented our two interfaces created in the design stage to handle incoming and outgoing commands in the GIM protocol. However, as we began entering method stubbs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming taffic, implementing the 'networkingOut and networkingIn' interfaces respectively.
+In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented our two interfaces created in the design stage to handle incoming and outgoing commands in the GIM protocol. However, as we began entering method stubbs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming taffic, implementing the `networkingOut and networkingIn' interfaces respectively.
 
-To create the networking component, the client had to create an instance of the 'ClientConnection' class and pass the network a "ServerConnection" object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread only. After confusion attempting to implement our ill informed design, we had to investigate alternative method of altering the GUI. Upon further investigation of concurrency in swing, we discovered that Swing had a 'buffer' (named the "Event Queue") of its own, that could be used as an alternative to queue GUI events. \footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.} To use this event queue, it is neccessary to wrap any code you wish to run on the UI thread in an anonymous class implementing "Runnable" as a parameter to the "invokeLater()" method.  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour as there would be 2 intermediate queues. Instead, we decided the appropriate method would be called directly from the network reader directly, and the event queue used where it was neccessary to alter the interface.
+To create the networking component, the client had to create an instance of the `ClientConnection' class and pass the network a ``ServerConnection'' object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread only. After confusion attempting to implement our ill informed design, we had to investigate alternative method of altering the GUI. Upon further investigation of concurrency in swing, we discovered that Swing had a `buffer' (named the ``Event Queue'') of its own, that could be used as an alternative to queue GUI events.\footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.} To use this event queue, it is neccessary to wrap any code you wish to run on the UI thread in an anonymous class implementing ``Runnable'' as a parameter to the ``invokeLater()'' method.  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour as there would be 2 intermediate queues. Instead, we decided the appropriate method would be called directly from the network reader directly, and the event queue used where it was neccessary to alter the interface.
 
  In retrospect, we may have abused this option in our implementation. There are some lines of code that are queued on the Swing EventQueue that do not effect the interface. In some cases, this is neccessary as some information has to be changed in order to keep operations sequential. However, there are some cases where it is not clear if operations need to be run on the event queue. Furthermore, in some cases our program appeared to working as expected, except in some fringe cases. After much work, we would find we had not wrapped code that needed to be synchronized in the event queue. A possible alternative would be to have used our original plan of reading commands from the buffer, and parsing them in the controller, and calling the appropriate method. Since most almost all commands from the server effect the GUI, all method calls could have been wrapped in the eventQueue at this stage. This would have served to have kept our code tidier (as the event queue would only be used once), and have inherently solved many of the threading problems we had by not invoking the event queue. As we only incrementally became aware of methods that required the event queue, it is clear we did not have a full understanding of the problems of threading in the early stages. By tackling this project, we have since learned the need for more careful consideration of threading issues.
 
-In the Network Design section, we outlined how we believed commands from the server would be parsed. While the operations of the proposed "Command" class remained largely intact, its responsibility of parsing had to be removed. Our original plan that this feature could be shared by the client and the server wasn't possible, as it was apparent that the server had some responsibilities while parsing that the client did not. \footnote{james should write a tiny wee bit here}
+In the Network Design section, we outlined how we believed commands from the server would be parsed. While the operations of the proposed ``Command'' class remained largely intact, its responsibility of parsing had to be removed. Our original plan that this feature could be shared by the client and the server wasn't possible, as it was apparent that the server had some responsibilities while parsing that the client did not.\footnote{james should write a tiny wee bit here}
 
 
 \subsection{Collaboration}
 
-The first draft of the GIM protocol treated all conversations as `rooms' and did not distinguish group chats and personal chats\footnote{internal reference to protocol section}. In designing the protocol, we wished to keep it abstract and not fall into the trap of implicitly implementing features that the client and server could handle. Our goal was not to develop a protocol suitable for only one type of implementation. Originally, it was believed that the client could distinguish personal chats and group chats by storing internal records of the type of outgoing invites to chat. In the case of being invited to chat, we believed using the protocol's ``USER'' argument in the ``\texttt{:ROOM:}'' command would be sufficient to count the amount of users in the room and determine the type of chat. However, as we began implementing room creation, it became clear that the initial group user list could be of size 1, and thus the wrong chat window could be created. As a result, the protocol had to be changed, and the client amended to reflect these changes. 
+The first draft of the GIM protocol treated all conversations as `rooms' and did not distinguish group chats and personal chats.\footnote{internal reference to protocol section} In designing the protocol, we wished to keep it abstract and not fall into the trap of implicitly implementing features that the client and server could handle. Our goal was not to develop a protocol suitable for only one type of implementation. Originally, it was believed that the client could distinguish personal chats and group chats by storing internal records of the type of outgoing invites to chat. In the case of being invited to chat, we believed using the protocol's ``USER'' argument in the \texttt{:ROOM:} command would be sufficient to count the amount of users in the room and determine the type of chat. However, as we began implementing room creation, it became clear that the initial group user list could be of size 1, and thus the wrong chat window could be created. As a result, the protocol had to be changed, and the client amended to reflect these changes. 
 
-This change was a test of the boundary of responsibilities within our system, as it effected communication with the server and the back end of the client. The protocol engineer's solution to the issue was to add a `type' argument to the room command. In the case creating a room, the type now had to be specified. To allow a user to work out what room type a chat had, the `type' argument would be used, with a room identifier. This kept the protocol more abstract. In order to deal with these changes, our client had to be designed to sequence responses from the server for certain requests. As the protocol did not include sequence numbers, we had to re-design the model to perform this task. It was apparent that the amount of ``talk'' between the client and server required to start a chat was now increased. This required an understanding of what needed to be achieved at each stage in the 'conversation.' This high level plan was determined:
+This change was a test of the boundary of responsibilities within our system, as it effected communication with the server and the back end of the client. The protocol engineer's solution to the issue was to add a `type' argument to the room command. In the case creating a room, the type now had to be specified. To allow a user to work out what room type a chat had, the `type' argument would be used, with a room identifier. This kept the protocol more abstract. In order to deal with these changes, our client had to be designed to sequence responses from the server for certain requests. As the protocol did not include sequence numbers, we had to re-design the model to perform this task. It was apparent that the amount of ``talk'' between the client and server required to start a chat was now increased. This required an understanding of what needed to be achieved at each stage in the `conversation.' This high level plan was determined:
 
 Creation:
 \begin{enumerate}
@@ -32,7 +31,7 @@ Creation:
 \item Server responds with `created' and the room id.
 \item Client matches the type of chat with the `new room' queue, and the user list from the `invitations' queue.
 \item Client spawns the appropriate chat window, or updates the internal state information of an existing window with the new roomid in the window list. Information includes who is in the room and the id to send messages to.
-\item Client is informed that the participant has joined the room, through the 'joined' argument in the "::ROOM::" command.
+\item Client is informed that the participant has joined the room, through the `joined' argument in the \texttt{:ROOM:} command.
 \end {enumerate}
 
 Invitation:
@@ -42,7 +41,7 @@ Invitation:
 \item Server responds with `Personal' or `Group.'
 \item Client matches request with response from the ``invited'' queue.
 \item Client spawns the appropriate chat window, or updates the internal state information of an existing window with the new roomid in the window list. Information includes who is in the room and the id to send messages to.
-\item Client is informed that the participant has joined the room, through the 'joined' argument in the "::ROOM::" command.
+\item Client is informed that the participant has joined the room, through the `joined' argument in the \texttt{:ROOM:} command.
 \item If it is a group chat, client asks server for the user list in the room.
 \end{enumerate}
 
@@ -54,4 +53,4 @@ As described in the design section, a requirement from the client model was to s
 
 Another significant evolution in our code, also centred around our use of Swing, was a need to overcome a problem with rendering the contact list. As a contact list naturally follows a tree structure, with branches arranged by status or group name, we thought the Swing `JTree' component was a suitable choice to use in our implementation. JTrees allow elements to be added and removed like leaves on branches, which is suitable for when contacts are added, removed, or their status changes. However, we experienced rendering problems with the JTree component in Swing across different platforms. On Windows-based platforms, friend elements were pushed together, and it ruined the appearance of the contact list. After significant hours of work to attempt to sort these rendering issues, we investigated using JLists instead. [write about writing own renderer, write about merits of JLists compared to JTrees.]
 
-Another problem that required a significant change to our code, and made our client more suited to future changes, was the need to reconcile the atomicity of the networking component, with events that needed to occur during the login process. Our original approach was for the client to wait for the ':: AUTHORISED ::' command from the GIM protocol, before changing the interface from the log on screen to the buddy list. The client would then ask the server for an update of the user's friends list, and their information. This was problematic, because there was a delay in the update of the buddy list information, which meant the default values would be displayed (their e-mail address in place of the nickname.) This was a result of the networking component being blind to the state of the user interface. Our solution was to delegate some more responsibilities to the networking  component, outside parsing the protocol and translating these into methods. On first receiving the ":: INFO ::" command from the server, the component now informed the model that the user information was initialised, allowing the buddy list to be displayed. This went against our design principle of having the networking component only have the role of implementing the GIM protocol, but this trade-off solved the problem of having inconsistent information on the user's interface. 
+Another problem that required a significant change to our code, and made our client more suited to future changes, was the need to reconcile the atomicity of the networking component, with events that needed to occur during the login process. Our original approach was for the client to wait for the :AUTHORISED: command from the GIM protocol, before changing the interface from the log on screen to the buddy list. The client would then ask the server for an update of the user's friends list, and their information. This was problematic, because there was a delay in the update of the buddy list information, which meant the default values would be displayed (their e-mail address in place of the nickname.) This was a result of the networking component being blind to the state of the user interface. Our solution was to delegate some more responsibilities to the networking  component, outside parsing the protocol and translating these into methods. On first receiving the :INFO: command from the server, the component now informed the model that the user information was initialised, allowing the buddy list to be displayed. This went against our design principle of having the networking component only have the role of implementing the GIM protocol, but this trade-off solved the problem of having inconsistent information on the user's interface. 
