Edited the evolution of code section in Implementation.

--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -5,16 +5,17 @@
 This section will analyse how appropriate our client design was to achieve the aims outlined in the client section.\footnote{See section x.y for a detailed discussion} Some of our design choices worked well, such as the interfaces used by the controller to separate concerns. Another decision that worked well was our use of the object oriented features of Java to implement chat windows, which reduced the challenge of routing internal messages to the correct windows. These aspects will be discussed in the `Design Implementation' section.
 
 While implementing the client, it became clear that some of our larger design choices were naive, and further design work had to be conducted. One case involved the interaction between the controller and networking subsystem. These changes will be discussed in the `Design Implementation' section. In some cases, smaller design choices required larger changes. Of particular significance, our understanding of the practical working of the GIM protocol to create personal chats proved to be weak. This required design work reaching over the protocol and the model component of the system. This process tested our ability to collaborate as a team to implement an interacting system. The degree of success of our changes will be discussed in the `Collaboration' section. Furthermore, as we became more familiar with the Java Swing environment, our code went through evolutionary steps to implement certain features in a more sensible manner, such as how displaying updates to user information was handled. The `Evolution of Code' section will discuss problems we identified with code that was functional but deemed to be hard to maintain, and the merits of the changes we made, such as in the above case.
+
 \subsection{Design Implementation}
 \label{designimpl}
 
-In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented our two interfaces created in the design stage to handle incoming and outgoing commands in the GIM protocol. However, as we began entering method stubbs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming taffic, implementing the `networkingOut and networkingIn' interfaces respectively.
+In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented the two interfaces created in the design stage. These interfaces would handle incoming and outgoing commands in the GIM protocol. However, as we began writing method stubs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming traffic, implementing the `networkingOut' and `networkingIn' interfaces respectively.
 
-To create the networking component, the client had to create an instance of the `ClientConnection' class and pass the network a ``ServerConnection'' object it could use to call methods after receiving commands from the server. There is a further difference here from our design here. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server, parse it, and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread only. After confusion attempting to implement our ill informed design, we had to investigate alternative method of altering the GUI. Upon further investigation of concurrency in swing, we discovered that Swing had a `buffer' (named the ``Event Queue'') of its own, that could be used as an alternative to queue GUI events.\footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.} To use this event queue, it is neccessary to wrap any code you wish to run on the UI thread in an anonymous class implementing ``Runnable'' as a parameter to the ``invokeLater()'' method.  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour as there would be 2 intermediate queues. Instead, we decided the appropriate method would be called directly from the network reader directly, and the event queue used where it was neccessary to alter the interface.
+To create the networking component, the client had to create an instance of the `ClientConnection' class and pass the network a ``ServerConnection'' object. It used this object to call methods after receiving commands from the server. There is a further difference here from our design. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server. This thread would then parse it and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread. After some confusion attempting to implement our ill informed design, we had to investigate an alternative method of altering the GUI. Upon further learning of concurrency in Swing, we discovered that Swing has a `buffer' (named the ``Event Queue'') of its own, that could be used as an alternative to queue GUI events.\footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.} To use this event queue, it is necessary to wrap any code you wish to run on the GUI thread in an anonymous class implementing ``Runnable'' as a parameter to the ``invokeLater()'' method.  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour as there would then be two intermediate queues. Instead, we decided the appropriate method would be called directly from the network reader, and the event queue would be used where it was necessary to alter the interface.
 
- In retrospect, we may have abused this option in our implementation. There are some lines of code that are queued on the Swing EventQueue that do not effect the interface. In some cases, this is neccessary as some information has to be changed in order to keep operations sequential. However, there are some cases where it is not clear if operations need to be run on the event queue. Furthermore, in some cases our program appeared to working as expected, except in some fringe cases. After much work, we would find we had not wrapped code that needed to be synchronized in the event queue. A possible alternative would be to have used our original plan of reading commands from the buffer, and parsing them in the controller, and calling the appropriate method. Since most almost all commands from the server effect the GUI, all method calls could have been wrapped in the eventQueue at this stage. This would have served to have kept our code tidier (as the event queue would only be used once), and have inherently solved many of the threading problems we had by not invoking the event queue. As we only incrementally became aware of methods that required the event queue, it is clear we did not have a full understanding of the problems of threading in the early stages. By tackling this project, we have since learned the need for more careful consideration of threading issues.
+In retrospect, we may have abused this option in our implementation. There are some operations we add to the Swing Event Queue that do not effect the interface. In some cases, this is necessary as some information has to be changed in order to keep operations sequential. However, there are some cases where it is not clear if operations need to be run on the event queue. Furthermore, in some cases our program appeared to working as expected, except in some fringe cases. After much work, we found we had not wrapped code that needed to be synchronized in the event queue. A possible alternative would be to have used our original plan of reading commands from the buffer, parsing them in the controller, and calling the appropriate method. Since most almost all commands from the server effect the GUI, all method calls could have been wrapped in the event queue at this stage. This would have served to have kept our code tidier (as the event queue would only be used once), and have inherently solved many of the threading problems we had by not invoking the event queue. As we only incrementally became aware of methods that required the event queue, it is clear we did not have a full understanding of the problems of threading in the early stages. By tackling this project, we have since learned the need for more careful consideration of threading issues.
 
-In the Network Design section, we outlined how we believed commands from the server would be parsed. While the operations of the proposed ``Command'' class remained largely intact, its responsibility of parsing had to be removed. Our original plan that this feature could be shared by the client and the server wasn't possible, as it was apparent that the server had some responsibilities while parsing that the client did not.\footnote{james should write a tiny wee bit here}
+In the Network Design section, we outlined how we believed commands from the server would be parsed. While the operations of the proposed Command class remained largely intact, its responsibility of parsing had to be removed. Our original plan that this feature could be shared by the client and the server wasn't possible, as it was apparent that the server had some responsibilities with parsing that the client did not. (***james should write a tiny wee bit here***)
 
 
 \subsection{Collaboration}
