--- a/TP3/dissertation/Requirements/problem_definition.tex
+++ b/TP3/dissertation/Requirements/problem_definition.tex
@@ -2,7 +2,7 @@
 The following was our given problem definition\footnote{\texttt{http://fims.moodle.gla.ac.uk/file.php/129/1243.pdf}}:
 
 \begin{quote}
-Instant messaging systems such as Jabber\footnote{\texttt{http://www.jabber.org/}}, AIM, ICQ\footnote{\texttt{http://www.icq.com/}} and IRC\footnote{\texttt{http://www.irc.org/}} have become popular in the last few years. The aim of the project is to build a simple instant messaging system, written in Java, to develop your understanding of networked systems and programming.
+Instant messaging systems such as Jabber\footnote{\texttt{http://www.jabber.org/}}, AIM, ICQ\footnote{\texttt{http://www.icq.com/}} and IRC\footnote{\texttt{http://www.irc.org/}} have become popular in the last few years. The aim of the project is to build a simple instant messaging system, written in Java\footnote{\texttt{http://www.oracle.com/technetwork/java/index.html}}, to develop your understanding of networked systems and programming.
 
 The group will be required to develop both an instant messaging client and server, and to design the network protocol they use to communicate. The server should accept connections from an arbitrary number of clients. Clients will have a graphical user interface, and should be able to accept and receive text-based messages, to indicate if the user is busy, available or idle, and to convey usernames and other details.
 
