--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -54,10 +54,27 @@ We anticipated this would be advantageous as it would reduce the repetition of c
 
 As we had decided to incorporate both group and one-to-one chats, this provided a wide scope in terms of interface design. We had the option to base our interface on either IRC or Windows Live Messenger style clients, or to create something entirely of our own. Windows Live was ultimately selected as the basis of the GUI for a number of reasons; primarily we believed that it was better suited to our feature set. An IRC style interface would require a considerable amount of redesigning to accommodate features such as display pictures, contact lists, and offline messaging. While creating our own style of IM interface would be interesting, it would likely lead to an inferior design, and be more time consuming to create. Windows Live style programs typically integrate the vast majority--if not all--of our MoSCoW feature set, and was therefore chosen as our starting point.
  
-After we had decided the basic form of the interface, we created use cases for the client interactions. As all users have equal rights within the application we did not deem it necessary to produce diagram representations.
+After we had decided the basic form of the interface, we created a number of use cases for the client interactions.
 
 \subsubsection{Example Use Cases}
 
-The following are examples of key use cases:
+The following are examples of key use cases as defined during the design process. These have not been altered for inclusion within this document.
+
+{\bf Add contact}
+User clicks the “add contact” button in the main window, or the option from the top menu. They are prompted to enter their friend’s email. They enter the email and the system searches for that person in the database. If found, the contact is sent a request for friendship. If the contact accepts, then both the user and contact now have each other as contacts, and they show up in the main window. If not accepted, neither is added. If the contact is not found, they are prompted again to enter the email, with the option to cancel.
+
+{\bf Group Chat}
+User can choose to group chat from the main window button, main menu, or in a chat window with another contact. A window will show up in which the user can create a chatroom, and then the user will be prompted to choose the contacts they wish to invite. The chatroom appears to the user. Those contacts will see the invitation, and if they accept, will be placed in the chatroom. Contacts will be able to invite other people as well. The chatroom will disappear once every user has left.
+
+{\bf Log Out}
+User clicks the “log out” option in the menu. The X in the corner will only minimize the program. A dialog box appears, asking if they are sure they want to log out. If yes, they are logged out, and the log in/register pop-up appears. If they want to quit the program completely, they will have to choose “quit” from the menu.
+
+At this stage of the process we had begun to make a few implementation decisions, and while some aspects of each use case were ommitted in the final product, generally these specifications were adheared to. Much of the redundancy was removed, primarilly due to time restrictions. For example the number of ways to start a group chat is reduced to one, from the three ways mentioned in the use case. Group chats can only be started by pressing the button on the main window, however, the other details of the use case are generally true to the implementation.
+
+The use of informal notation for the use cases was, in retrospect, ill-conceived. A more formal notation including pre and post conditions, non-functional requirements, and priorities would have provided a better foundation for implementation. Due to the scope of the project and the time restrictions, we felt that these simple use cases were adequate.
+
+\subsubsection{Interface Wireframes}
+
+With the use cases, we started to design a GUI which could accomidate the desired features. Although many UI sketches were made, they were all minor variations on the core design which heavily derived from the traditional MSN model.
 
 
